magento-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: magento
  name: magento
  namespace: demo
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: magento
    tier: frontend
